# dapr_modules

./: .gitignore  README.md
comp529_big/comp529_a1/: a1_spark.py  berragan_201374125.Rmd  pyproject.toml  template.tex
comp529_big/comp529_a1/figs/: dataflow
comp529_big/comp529_a1/output/: part-00000  part-00001
envs613_dissertation/flood_prediction/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
envs613_dissertation/flood_prediction/paper/: appendix.Rmd  index.Rmd  index.tex  structure.md  wclatex.py
envs613_dissertation/flood_prediction/paper/00_abstract/: abstract.Rmd
envs613_dissertation/flood_prediction/paper/01_introduction/: introduction.Rmd
envs613_dissertation/flood_prediction/paper/02_literature/: literature.Rmd
envs613_dissertation/flood_prediction/paper/03_methods/: methods.Rmd
envs613_dissertation/flood_prediction/paper/04_results/: results.Rmd
envs613_dissertation/flood_prediction/paper/05_discussion/: discussion.Rmd
envs613_dissertation/flood_prediction/paper/bib/: main.bib
envs613_dissertation/flood_prediction/paper/figures/: XX_confusion.R  XX_map.R  XX_mean_tweets.R  XX_metrics.R  XX_places.R  XX_rainfall.R  XX_sent.R  XX_test_timeline.R  XX_transformer_viz_rtn.html  XX_transformer_viz_rtp.html  XX_transformer_viz_tn.html  XX_transformer_viz_tp.html
envs613_dissertation/flood_prediction/paper/scripts/: defaults.R
envs613_dissertation/flood_prediction/paper/template/: template.tex
envs613_dissertation/flood_prediction/src/: inf.py  run.py
envs613_dissertation/flood_prediction/src/common/: get_tweets.py  keyword_extraction.py  process_tweets.py  rainfall.py  utils.py
envs613_dissertation/flood_prediction/src/pl_modules/: classifier_model.py  ger_model.py  (+1 more)
envs615_dynamics/envs615_a1/: 00_data_cleaning.ipynb  00_data_cleaning.py  01_unsupervised.py  02_supervised.Rmd  02_supervised.py  03_overfitting.py  a1_envs615.html  essay.Rmd  essay.html  pyproject.toml
(+39 files in other folders)
