[tool.poetry]
name = "a1"
version = "0.1.0"
description = ""
authors = ["cjber <cjberragan@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.*"
pyspark = "^3.0.1"
pylint = "^2.6.0"
ipython = "^7.19.0"
autopep8 = "^1.5.4"
pyspark-stubs = "^3.0.0"
mypy = "^0.790"
flake8 = "^3.8.4"
findspark = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
