[tool.poetry]
name = "flood_prediction"
version = "0.1.0"
description = ""
authors = ["cjber <cjberragan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.9.0"
pytorch-lightning = "^1.4.2"
transformers = "^4.9.2"
searchtweets-v2 = "^1.1.1"
jsonlines = "^2.0.0"
doccano = "^1.4.1"
geopandas = "^0.9.0"
Rtree = "^0.9.7"
transformers-interpret = "^0.5.2"
ekphrasis = "^0.5.1"
imgkit = "^1.2.2"
data-science-types = "^0.2.23"
pytest = "^6.2.4"
pdoc3 = "^0.10.0"
flake8 = "^3.9.2"
black = "^21.7b0"
ipdb = "^0.13.9"
jupyter = "^1.0.0"
isort = "^5.9.3"
sourcery-cli = "^0.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
