[tool.poetry]
name = "assessment1"
version = "0.1.0"
description = ""
authors = ["cjber <cjberragan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
googletrans = "^2.4.0"
matplotlib = "^3.1.2"
mypy = "^0.761"
ipython = "^7.12.0"
pandas = "^1.0.1"
seaborn = "^0.10.0"
sklearn = "^0.0"
autopep8 = "^1.5"
pep8 = "^1.7.1"
statsmodels = "^0.11.1"
flake8 = "^3.7.9"
jupyterlab = "^2.0.0"
jupyter_contrib_nbextensions = "^0.5.1"
jupyterthemes = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
